syntax = "proto3";

package userService;

option go_package = "./;userService";

import "google/protobuf/timestamp.proto";

message CreateUserRequest {
  string UserID = 1;
  string Username = 2;
  string Email = 3;
  string Address = 4;
  string Phone = 5;
  string RoleID = 6;
  string Name = 7;
  google.protobuf.Timestamp CreatedAt = 8;
  string CreatedBy = 9;
  google.protobuf.Timestamp UpdatedAt = 10;
  string UpdatedBy = 11;
  google.protobuf.Timestamp DeleteAt = 12;
  string DeleteBy = 13;
}

message CreateUserResponse {
  string UserID = 1;
}

service userService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}